# axum.tut

./: Cargo.toml
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_hello.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
